updated table and figures

--- a/Legacy.bib
+++ b/Legacy.bib
@@ -339,3 +339,63 @@ doi = {10.1093/gigascience/gix067},
 URL = {http://dx.doi.org/10.1093/gigascience/gix067},
 eprint = {/oup/backfile/content_public/journal/gigascience/6/9/10.1093_gigascience_gix067/4/gix067.pdf}
 }
+@article{song2015testing,
+  title={Testing for genetic associations in arbitrarily structured populations},
+  author={Song, Minsun and Hao, Wei and Storey, John D},
+  journal={Nature genetics},
+  volume={47},
+  number={5},
+  pages={550},
+  year={2015},
+  publisher={Nature Publishing Group}
+}
+@article{lopez2017genome,
+  title={A genome-wide association study suggests the HLA Class II region as the major susceptibility locus for IgA vasculitis},
+  author={L{\'o}pez-Mej{\'\i}as, Raquel and Carmona, F David and Casta{\~n}eda, Santos and Genre, Fernanda and Remuzgo-Mart{\'\i}nez, Sara and Sevilla-Perez, Bel{\'e}n and Ortego-Centeno, Norberto and Llorca, Javier and Ubilla, Bego{\~n}a and Mijares, Ver{\'o}nica and others},
+  journal={Scientific reports},
+  volume={7},
+  number={1},
+  pages={5088},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+@article{tian2017genome,
+  title={Genome-wide association and HLA region fine-mapping studies identify susceptibility loci for multiple common infections},
+  author={Tian, Chao and Hromatka, Bethann S and Kiefer, Amy K and Eriksson, Nicholas and Noble, Suzanne M and Tung, Joyce Y and Hinds, David A},
+  journal={Nature communications},
+  volume={8},
+  number={1},
+  pages={599},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+@article{luciano2018association,
+  title={Association analysis in over 329,000 individuals identifies 116 independent variants influencing neuroticism},
+  author={Luciano, Michelle and Hagenaars, Saskia P and Davies, Gail and Hill, W David and Clarke, Toni-Kim and Shirali, Masoud and Harris, Sarah E and Marioni, Riccardo E and Liewald, David C and Fawns-Ritchie, Chloe and others},
+  journal={Nature genetics},
+  volume={50},
+  number={1},
+  pages={6},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+@article{yucesoy2015genome,
+  title={Genome-wide association study identifies novel loci associated with diisocyanate-induced occupational asthma},
+  author={Yucesoy, Berran and Kaufman, Kenneth M and Lummus, Zana L and Weirauch, Matthew T and Zhang, Ge and Cartier, Andre and Boulet, Louis-Philippe and Sastre, Joaquin and Quirce, Santiago and Tarlo, Susan M and others},
+  journal={Toxicological Sciences},
+  volume={146},
+  number={1},
+  pages={192--201},
+  year={2015},
+  publisher={Oxford University Press}
+}
+@article{astle2016allelic,
+  title={The allelic landscape of human blood cell trait variation and links to common complex disease},
+  author={Astle, William J and Elding, Heather and Jiang, Tao and Allen, Dave and Ruklisa, Dace and Mann, Alice L and Mead, Daniel and Bouman, Heleen and Riveros-Mckay, Fernando and Kostadima, Myrto A and others},
+  journal={Cell},
+  volume={167},
+  number={5},
+  pages={1415--1429},
+  year={2016},
+  publisher={Elsevier}
+}
